@@ -1,1 +1,3 @@
 # PerfumeShop-MVVM
+
+Add --add-modules java.xml.bind --add-opens java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED to VMOptions in Configuration.
